Fixes gap between mobile menu and nav bar

--- a/scss/partials/_menu.scss
+++ b/scss/partials/_menu.scss
@@ -354,10 +354,10 @@
   }
 
   &:target {
-    transform: translateY(54%);
+    transform: translateY(52%);
 
     @include breakpoint(tablet) {
-      transform: translateY(54%);
+      transform: translateY(52%);
     }
     /* 
         * Transform all the slices of hamburger
